--- a/index.html
+++ b/index.html
@@ -6,29 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li>Gmail</li>
-                <li>Imágenes</li>
-                <li><span></span></li>
-                <li><span></span></li>
+            <ul class="nav-right-section">
+                <li><a href="">Gmail</a></li>
+                <li><a href="">Imágenes</a></li>
+                <li class="menu-icon"><a href=""><span class="material-icons">
+                    dashboard
+                    </span></a></li>
+                <li><a href=""><img src="https://lh3.googleusercontent.com/ogw/AAEL6si-TlutZed985-bKtbnIgQTLvCPH6ydJuDDccqT=s32-c-mo" alt="Profile Photo"></a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main-container">
         <section>
             <h1>Google</h1>
         </section>
-        <div>
-            <input type="text">
-        </div>
-        <div>
-            <button>Buscar con Google</button>
-            <button>I'm Feeling Lucky</button>
-        </div>
+        <section class="main-container--input">
+            <input type="search">
+        </section>
+        <section class="main-container--buttons">
+            <button class="main-container--button-left">Buscar con Google</button>
+            <button class="main-container--button-right">I'm Feeling Lucky</button>
+        </section>
     </main>
     <footer>
         <div class="left">
@@ -40,7 +44,7 @@
             </ul>
         </div>
         <div>
-            <ul>
+            <ul class="Right">
                 <li>Privacidad</li>
                 <li>Condiciones</li>
                 <li>Preferencia</li>
