finish google clone for desktop

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Google</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    rel="stylesheet">
+    <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-512.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -22,34 +23,54 @@
             </ul>
         </nav>
     </header>
-    <main class="main-container">
-        <section>
-            <h1>Google</h1>
+    <main>
+        <section class="main-logo"> 
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo">
         </section>
-        <section class="main-container--input">
-            <input type="search">
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+
+                </span>
+                <input type="text">
+                <a class="micro-icon" href=""></a>
+            </div>
         </section>
-        <section class="main-container--buttons">
-            <button class="main-container--button-left">Buscar con Google</button>
-            <button class="main-container--button-right">I'm Feeling Lucky</button>
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>I'm Feeling Lucky</button>
+            </div>
         </section>
     </main>
     <footer>
-        <div class="left">
-            <ul>
-                <li>Publicidad</li>
-                <li>Negocios</li>
-                <li>Acerca De</li>
-                <li>Cómo Funciona la Búsqueda</li>
+            <ul class="footer-left">
+                <li>
+                    <a href="">Publicidad</a>
+                </li>
+                <li>
+                    <a href="">Negocios</a>
+                </li>
+                <li>
+                    <a href="">Acerca De</a>
+                </li>
+                <li>
+                    <a href="">Cómo Funciona la Búsqueda</a>
+                </li>
             </ul>
-        </div>
-        <div>
-            <ul class="Right">
-                <li>Privacidad</li>
-                <li>Condiciones</li>
-                <li>Preferencia</li>
+            <ul class="footer-right">
+                <li>
+                    <a href="">Privacidad</a>
+                </li>
+                <li>
+                    <a href="">Condiciones</a>
+                </li>
+                <li>
+                    <a href="">Preferencia</a>
+                </li>
             </ul>
-        </div>
     </footer>
 </body>
 </html>
